# solvis

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  codecov.yml  demo.py  demo_multi_polygons.py  demo_polygons.py  mkdocs.yml  multi_city_analyse.py  multi_city_events.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  publish-static-docs.yml  release.yml  run-tests.yml
demo/: demo_composite.py  demo_jack.py  demo_polygons.py  mfd_sanity.py  multi_city_analyse.py  multi_city_events.py
docs/: installation.md  scripts.md  testing.md  usage.md
docs/api/filter/: chainable_set_base.md  index.md  parent_fault_id_filter.md  rupture_id_filter.md  subsection_id_filter.md
docs/api/inversion_solution/: composite_solution.md  dataframe_models.md  fault_system_solution.md  fault_system_solution_file.md  index.md  inversion_solution.md  inversion_solution_file.md  inversion_solution_model.md  inversion_solution_operations.md  named_fault.md  solution_surfaces_builder.md  subsection_id_filter.md  typing.md
docs/api/solution/: composite_solution.md  dataframe_models.md  index.md  named_fault.md  solution_participation.md  solution_surfaces_builder.md  typing.md
docs/api/solution/fault_system_solution/: fault_system_solution.md  fault_system_solution_file.md  fault_system_solution_model.md  index.md
docs/api/solution/inversion_solution/: index.md  inversion_solution.md  inversion_solution_file.md  inversion_solution_model.md
docs/api/solvis/: config.md  geometry.md  get_secret.md  index.md  solvis.md  utils.md
docs/scripts/: cli.md
scripts/: cli.py  demo.py  demo_composite.py  demo_multi_polygons.py  demo_polygons.py  demo_rupture_surfaces.py  mfd_sanity.py  multi_city_analyse.py  multi_city_events.py
solvis/: DEVELOPMENT.md  __init__.py  config.py  demo.py  fault_system_solution_helper.py  geojson.py  geometry.py  get_secret.py  inversion_solution.py  solvis.py  utils.py
solvis/dochelper/: __init__.py  extension.py  inherit_docstrings.py
solvis/fault_system_solution/: fault_system_solution_file.py  fault_system_solution_model.py
solvis/filter/: __init__.py  chainable_set_base.py  parent_fault_id_filter.py  rupture_id_filter.py  subsection_id_filter.py
solvis/inversion_solution/: __init__.py  composite_solution.py  composite_solution_file.py  dataframe_models.py  fault_system_solution.py  fault_system_solution_file.py  fault_system_solution_model.py  inversion_solution.py  inversion_solution_file.py  inversion_solution_model.py  inversion_solution_operations.py  named_fault.py  parent_fault_id_filter.py  rupture_id_filter.py  solution_surfaces_builder.py  solution_surfaces_mixin.py  subsection_id_filter.py  typing.py
solvis/inversion_solution/fault_system_solution/: __init__.py  fault_system_solution.py
solvis/scripts/: cli.py
solvis/solution/: __init__.py  composite_solution.py  dataframe_models.py  named_fault.py  solution_participation.py  solution_surfaces_builder.py  typing.py
solvis/solution/fault_system_solution/: __init__.py  fault_system_solution.py  fault_system_solution_file.py  fault_system_solution_model.py
solvis/solution/inversion_solution/: __init__.py  inversion_solution.py  inversion_solution_file.py  inversion_solution_model.py
test/: conftest.py  demo.py  test_circle_polygon.py  test_composite_solution.py  test_dataframe_serialisation.py  test_fault_system_solution.py  test_fault_system_solution_filter.py  test_fault_system_solution_helper.py  test_filtered_composite_solution.py  test_geometry.py  test_geometry3d_spherical_intersection.py  test_geometry_dip.py  test_geometry_subduction.py  test_inversion_solution.py  test_new_inversion_solution.py  test_pyvista_3d.py  test_rupture_representatives.py  test_solution_surfaces_builder.py  test_solvis.py  test_solvis_functions.py
test/filter/: conftest.py  test_chainable_set.py  test_fault_system_solution_helper.py  test_filter_parent_fault_ids.py  test_filter_rupture_ids.py  test_filter_subsection_ids.py  test_named_fault.py
test/fixtures/: hik_fault_sections.geojson  puy_fault_sections.geojson
test/fixtures/MiniInversionSolution/: README
test/fixtures/MiniInversionSolution/ruptures/: average_slips.csv  fault_sections.geojson  grid_node_association_fracts.csv  grid_node_sect_associations.csv  grid_region.geojson  indices.csv  info.txt  inversion_target_mfds.json  logic_tree_branch.json  mod_sect_min_mags.csv  modules.json  plausibility.json  properties.csv  regional_inversion_target_mfds.json  sect_areas.csv  sect_polygons.geojson  sect_slip_rates.csv
test/fixtures/MiniInversionSolution/solution/: annealing_progress.csv  build_info.json  modules.json  rates.csv  sub_seismo_on_fault_mfds.csv
test/fixtures/ModularAlpineVernonInversionSolution/: modules.json
test/fixtures/ModularAlpineVernonInversionSolution/ruptures/: average_slips.csv  fault_sections.geojson  grid_node_association_fracts.csv  grid_node_sect_associations.csv  indices.csv  info.txt  inversion_target_mfds.json  logic_tree_branch.json  mod_sect_min_mags.csv  modules.json  properties.csv  regional_inversion_target_mfds.json  sect_areas.csv  sect_polygons.geojson  sect_slip_rates.csv
test/fixtures/ModularAlpineVernonInversionSolution/solution/: annealing_progress.csv  build_info.json  rates.csv  (+1 more)
test/fixtures/TinyInversionSolution/: README.md
test/geometry/: test_circle_polygon.py  test_geometry.py  test_geometry_dip.py  test_geometry_distance.py  test_geometry_performance.py  test_geometry_subduction.py  test_geometry_surface.py
test/inversion_solution/: test_dataframe_models.py  test_inversion_solution_rate_scaling.py
test/participation/: test_fault_system_solution_named_fault_participation.py  test_fault_system_solution_parent_fault_participation.py  test_fault_system_solution_section_participation.py  test_inversion_solution_parent_fault_participation.py  test_inversion_solution_section_participation.py  test_performance.py
test/performance/: Performance hit investigation.md
