[tool.poetry]
name = "solvis"
version = "1.0.0"
description = "analysis of opensha modular solution files."
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
packages = [
	{include = "solvis"},
    {include = "test", format = "sdist" }
]

[tool.poetry.scripts]
cli = 'solvis.scripts.cli:cli'

[tool.poetry.dependencies]
boto3 = {version = "^1.26.82", optional = true}
click = {version = "^8.1.3", optional = true}
click-plugins = {version = "^1.1.1", optional = true}
nshm-toshi-client = {version = "^1.0.0", optional = true}
pyproj = "^3.3"
python = ">=3.9,<4.0"
python-dateutil = "^2.8.2"
pyvista = {version = "^0.44.1", optional = true}
geopandas = "^1.0.1"

nzshm-common = "^0.8.1"

# see https://github.com/orgs/python-poetry/discussions/7937
# urllib3 = "<2"
pandera = {extras = ["mypy"], version = "^0.20.4"}
pytz = "^2025.1"
nzshm-model = "^0.13.5"



[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
pytest = { version = "^6.2.4"}
pytest-cov  = { version = "^2.12.0"}
matplotlib = "^3.6.3"
tox = "^4.4.4"
ipython = "^8.11.0"
mypy = "^1.7.1"
pytest-xdist = "^3.5.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {version = "^0.26.2", extras = ["python"]}
mkdocs-autorefs = "^1.0.1"
mkdocs-include-markdown-plugin = "^6.0.6"
mkdocs-material = "^9.5.21"
mkdocs-material-extensions = "^1.3.1"
mkdocs-pymdownx-material-extras = "^2.5.6"
mkdocs-with-pdf = "^0.9.3"
mkdocs-click = "^0.8.1"

[tool.poetry.extras]
scripts = [
    "nshm-toshi-client",
    "boto3",
    "click",
    "click-plugins"
]
vtk = [
    "pyvista"
]
demo = [
    "shapely"
]
# dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml", "bump2version"]


[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311', 'py310', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
