[project]
name = "solvis"
version = "1.3.1"
description = "Analysis of opensha modular solution files."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz" },
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}     
]
requires-python = ">=3.10,<4.0"

dependencies = [
    "geopandas (>=1.0.1)",
    "nzshm-common (>=0.8.1)",
    "nzshm-model (>=0.13.5)",
    "pandas (>=2.3.0)",
    "pyproj (>=3.3)",
    "python-dateutil (>=2.8.2)",
    "pytz (>=2025.1)",
    "pandera (>=0.26.0)"
]

[tool.poetry]
packages = [
	{include = "solvis"},
    {include = "test", format = "sdist" }
]

[project.scripts]
cli = 'solvis.scripts.cli:cli'

[project.optional-dependencies]
vtk = ["pyvista (>=0.44.1)"]
demo = ["shapely"]

[dependency-groups]
doc = [
    { include-group = "scripts" },
    "mkdocs (>=1.6.1)",
    "mkdocs-autorefs (>=1.0.1)",
    "mkdocs-click (>=0.8.1)",
    "mkdocs-include-markdown-plugin (>=7.1.8)",
    "mkdocs-material (>=9.5.21)",
    "mkdocs-material-extensions (>=1.3.1)",
    "mkdocs-pymdownx-material-extras (>=2.5.6)",
    "mkdocs",
    "mkdocstrings (>=0.26.2)",
    "mkdocstrings-python (>=1.18.2,<2.0.0)",
]
dev = [
    "black (>=24.10.0)",
    "bump2version (>=1.0.1)",
    "flake8 (>=7.1.1)",
    "flake8-docstrings (>=1.7.0)",
    "ipython (>=8.11.0)",
    "isort (>=5.13.2)",
    "matplotlib (>=3.6.3)",
    "mypy (>=1.18.2)",
    "pandas-stubs (==2.3.0.250703.*)",
    "pip-audit (>=2.9.0)",
    "pytest-cov  (>=2.12.0)",
    "pytest-xdist (>=3.5.0)",
    "pyvista (>=0.44.1)",
    "safety (>=3.6.2)",
    "tox (>=4.4.4)"
]
scripts = [
    "boto3",
    "click (>=8.1.3)",
    "click-plugins (>=1.1.1)",
    "nshm-toshi-client (>=1.0.0)"
]

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.scripts]
optional = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311', 'py310', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
